Seeing if the build still runs before attempting some updates.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,14 @@
+language: ruby
 env:
-  - "RAILS_VERSION=3.1.0"
-  - "RAILS_VERSION=3.2.0"
-  - "RAILS_VERSION=4.0.0"
+  - "RAILS_VERSION=3"
+  - "RAILS_VERSION=4"
+  - "RAILS_VERSION=5"
+  - "RAILS_VERSION=master"
 rvm:
   - 1.9.3
-  - 2.0.0
+  - 2.0
+  - 2.1
+  - 2.2
+  - 2.3
+  - 2.4
+  - ruby-head
