--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ env:
   - RAILS_VERSION=3
   - RAILS_VERSION=4
   - RAILS_VERSION=5
+  - RAILS_VERSION=6
   - RAILS_VERSION=master
 
 rvm:
@@ -13,6 +14,9 @@ rvm:
   - 2.2
   - 2.3
   - 2.4
+  - 2.5
+  - 2.6
+  - 2.7
   - ruby-head
 
 matrix:
@@ -20,12 +24,30 @@ matrix:
     - rvm: 1.9
       env: RAILS_VERSION=5
     - rvm: 1.9
+      env: RAILS_VERSION=6
+    - rvm: 1.9
       env: RAILS_VERSION=master
     - rvm: 2.0
       env: RAILS_VERSION=5
+    - rvm: 2.0
+      env: RAILS_VERSION=6
     - rvm: 2.0
       env: RAILS_VERSION=master
     - rvm: 2.1
       env: RAILS_VERSION=5
     - rvm: 2.1
+      env: RAILS_VERSION=6
+    - rvm: 2.1
+      env: RAILS_VERSION=master
+    - rvm: 2.2
+      env: RAILS_VERSION=6
+    - rvm: 2.2
+      env: RAILS_VERSION=master
+    - rvm: 2.3
+      env: RAILS_VERSION=6
+    - rvm: 2.3
+      env: RAILS_VERSION=master
+    - rvm: 2.4
+      env: RAILS_VERSION=6
+    - rvm: 2.4
       env: RAILS_VERSION=master
